# library_catalog

./: pyproject.toml
src/library_catalog/core/: config.py  database.py
src/library_catalog/data/models/: book.py
src/library_catalog/data/repositories/: base_repository.py  book_repository.py
